# opsrag

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  config-example.yaml  config.yaml  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  release.yml  security.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
deploy/compose/: config.yaml  docker-compose.yaml
docs/: README.md  api-reference.md  architecture.md  auth.md  channels.md  configuration.md  contributing-audit.md  deployment.md  eval-badge.json  evaluation.md  getting-started.md  helm-chart.md  investigations.md  mcp-integrations.md  memory.md  multi-environment.md  operations.md  rag-pipeline.md
opsrag/: __init__.py  config.py  config_mcp.py  context.py  correction_store.py  environments.py  factory.py  feedback_store.py  indexing_tracker.py  model_bundles.py  model_router.py  pending_corrections.py  qa_cache.py  qa_cache_judge.py  qa_cache_ner.py  qa_cache_normalize.py  tokenization.py  usage.py  usage_persistence.py  vectorstore_guard.py
opsrag/agent/: __init__.py  anchors.py  classifier.py  graph.py  model_router.py  path_tree.py  prompt_render.py  prompts.py  query_decomposer.py  query_rewrite.py  repomap.py  state.py
opsrag/agent_settings/: __init__.py  store.py
opsrag/api/: __init__.py  _connector_perms.py  errors.py  images.py  investigation_routes.py  mcp_routes.py  middleware.py  models.py  oidc_enforcement.py  rate_limit_backend.py  routes.py  routes_admin_users.py  routes_channels.py  routes_health.py  routes_investigations.py  routes_runbooks.py  routes_webhooks.py  server.py
opsrag/auth/: __init__.py  connector_perms.py  login.py  middleware.py  oidc.py  password.py  pomerium.py  scopes.py  sessions.py  sso.py  store.py  user_store.py
opsrag/channels/: __init__.py  base.py  boot.py  config.py  dispatcher.py  feedback.py  image_fetch.py  origin.py  permission.py  registry.py  streaming.py  types.py
opsrag/chunkers/: __init__.py  fixed_size.py  parent_child.py
opsrag/db/: __init__.py  migrate.py
opsrag/embedders/: __init__.py  bedrock.py  cached.py  fastembed.py  litellm_provider.py  openai.py  vertex.py
opsrag/eval/: __init__.py  __main__.py  cli.py  conftest.py  loaders.py  report.py  retrieval_offline.py  runner.py  test_smoke.py  usage_hook.py
opsrag/extractors/: __init__.py  hybrid.py  llm_extractor.py  routing.py  rule_based.py  schema.py
opsrag/graphstores/: __init__.py  neo4j.py  null.py
opsrag/indexed_files/: __init__.py  noop.py  postgres.py
opsrag/indexing/: __init__.py  pg_store.py
opsrag/ingestion/: __init__.py  cluster_graph.py  contextual.py  enrich.py  indexer.py  metadata.py  pipeline.py
opsrag/interfaces/: __init__.py  chunker.py  embedder.py  entity_extractor.py  graphstore.py  indexed_files.py  llm.py  memory.py  observability.py  parser.py  reranker.py  scm.py  session.py  source.py  vectorstore.py
opsrag/investigations/: __init__.py  evaluator.py  event_types.py  feature_gate.py  runner.py  store.py
opsrag/job/: __init__.py  indexer.py  launcher.py
opsrag/light_graph/: __init__.py  postgres.py
opsrag/llms/: __init__.py  anthropic.py  bedrock.py  content.py  json_extract.py  litellm_provider.py  openai.py  pricing.py  vertex.py
opsrag/mcp/: __init__.py  _fake.py  aws.py  azure.py  billing_datadog.py  billing_gcp.py  billing_kubecost.py  billing_mongodb_atlas.py  cloudflare.py  cloudwatch.py  code.py  datadog.py  dependency_parsers.py  elasticsearch.py  gcp.py  github.py  gitlab.py  grafana.py  knowledge.py  kubernetes.py  loki.py  pagerduty.py  prometheus.py  registry.py  rootly.py  runbooks.py  sentry.py  slack.py  splunk.py  stackdriver.py  tool_cache.py
opsrag/mcp_server/: __init__.py  audit.py  rate_limit.py  registry.py  registry_loader.py  server.py  token_store.py
opsrag/memory/: __init__.py  mem0_store.py  memory.py  postgres.py
opsrag/observability/: __init__.py  console.py  phoenix.py
opsrag/parsers/: __init__.py  alert.py  code_structure.py  generic.py  helm.py  k8s.py  markdown.py  postmortem.py  runbook.py  terraform.py
opsrag/rerankers/: __init__.py  bedrock.py  cohere.py  fastembed_reranker.py  mmr.py  noop.py  vertex.py
opsrag/runbooks/: __init__.py  generator.py  models.py  store.py  tagger.py  taxonomy.py
opsrag/scheduler/: __init__.py  daily.py
opsrag/scm/: __init__.py  git_clone.py  github.py  gitlab.py  local.py
opsrag/sessions/: __init__.py  memory.py  postgres.py  replay_components.py
opsrag/slack_bot/: __init__.py  client.py  config.py  first_responder.py  handler.py  identity.py  permission.py  render.py  reply_format.py  request_extract.py  slack_text.py  streaming.py  thread_context.py
opsrag/sources/: __init__.py
opsrag/tools/: __init__.py  backfill_file_key.py
opsrag/vectorstores/: __init__.py  bm25_sparse.py  lane_weights.py  pgvector.py  priority.py  qdrant.py  rrf.py
samples/manifests/: acme-notes-api.yaml
samples/postmortems/: 2026-01-15-acme-notes-db-outage.md  2026-02-03-acme-notes-api-latency.md  2026-03-20-acme-notes-auth-outage.md
samples/runbooks/: 001-acme-notes-deploy.md  002-acme-notes-db-failover.md  003-acme-notes-scaling.md  004-acme-notes-incident-response.md  (+1 more)
samples/terraform/: main.tf
scripts/: audit-rules.yaml  audit-vendor-neutrality.sh  seed-sample-corpus.sh
tests/: conftest.py  test_auth_convergence.py  test_auth_login.py  test_auth_scopes.py  test_chart_tool.py  test_connector_perms.py  test_connector_perms_wiring.py  test_csrf_enforcement.py  test_external_mcp_client.py  test_external_mcp_config.py  test_external_mcp_connector.py  test_external_mcp_rbac.py  test_replay_components.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
(+386 files in other folders)
